--- a/generales.css
+++ b/generales.css
@@ -3,18 +3,20 @@
   margin: 0;
   background-color: #0F0F0F;
   color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 /*esto es solo para el nav*/
 nav {
   display:grid;
   grid-template-columns: auto 1fr auto;
-  padding: 15px 30px 10px 30px;
+  padding: 15px 20px 10px 15px;
 
 }
 nav>div{
   display: flex;
-  gap: 10px;
-  justify-content: center;
+  gap: 20px;
+  flex-direction: row;
+  justify-content: end;
   align-items: center;
 
 }
@@ -33,6 +35,7 @@ display: flex;
   border: rgba(128, 128, 128, 0.527) 1px solid;
   width: 60px;
   cursor: pointer;
+  background-color: #272727;
 }
 input{
   border-radius: 20px 0px 0px 20px;
@@ -41,14 +44,20 @@ input{
   border: none;
   border: rgba(128, 128, 128, 0.527) 1px solid;
   width: 500px;
-  height: 40px;
+  height: 38px;
 }
 
+.button-responsive {
+display: flex;
+flex-direction: row;
+gap: 5px;
+}
 .botoneslaterales {
+  display: flex;
+  flex-direction: row;
   outline: none;
   border: none;
-  cursor: pointer;
-  gap: 20px;
+  gap: 5px;
 }
 
 .fotoperfil{
@@ -60,45 +69,152 @@ input{
   width: 100px;
   cursor: pointer;
 }
+
+.bch{
+  border: none;
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  background: none;
+  font-size: 16px;
+}
+nav button:hover{
+  background-color: rgba(77, 71, 71, 0.884);
+}
 #barras {
   cursor: pointer;
 }
+
 #micronav{
+  cursor: pointer;
+  background-color: #272727;
+  border-radius: 100%;
+}
+#lupa{
+  cursor: pointer;
+}
+#cargar{
+  cursor: pointer;
+}
+#campana{
+  cursor: pointer;
+}
+#microfono{
   cursor: pointer;
 }
 @media screen and (min-width:768px) {
   .busqueda{
-    display:flex;}
+    display:flex;
+    justify-content: center;}
   .button-responsive{
-    display: none; }
+    display: none;}
 }
 
 /*esto es para el body */
+
 
 .contenedor {
   width: 100%;
   min-height: 100vh;
   margin: 0 auto;
   display: grid;
-  grid-template-columns:200px auto;
+  grid-template-columns:70px auto;
   grid-template-rows: 40px auto;
   grid-template-areas:"sidebar topmain"
                       "sidebar  main";
 }
-
+/* esto es para la barra lateral izquierda*/
 .sidebar {
   grid-area: sidebar;
-  background: rgb(72, 141, 32);
+  background: #0f0f0f;
 
 }
+.sidebar a{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  color: white;
+  font-size: 11px;
+  text-decoration: none;
+  height: 50px;
+}
+.sidebar a:hover{
+  background-color: rgba(77, 71, 71, 0.884);
+  border-radius: 10%;
+}
 
+/* esto es para los botones del centro*/
 .topmain{
   grid-area: topmain;
-  background: black;
-
+  background: #0F0F0F;
 }
+.topmain{
+  display: flex;
+  flex-direction: row;
+  align-items:center;
+  justify-content:center;
+  gap: 20px;
+  width: 100%;
+}
+.topmain button{
+  border-radius: 10px;
+  color: white;
+  background-color: #272727;
+  padding: 5px 10px;
+  outline: none;
+  border: none;
+  font-weight: 500;
+}
+
+.topmain button:hover{
+  background-color: rgba(77, 71, 71, 0.884);
+}
+
+#siguiente{
+  border-radius: 100%;
+  background-color: #0F0F0F;
+}
+#siguiente:hover{
+  background-color: rgba(77, 71, 71, 0.884);
+  border-radius: 100%;
+}
+
+/* esto es para la parte principal de los videos*/
 
 .main{
   grid-area: main;
-  background: brown;
+  background: #0F0F0F;
+  padding: 10px;
+}
+
+.gridvideos{
+display: grid;
+grid-gap: 40px 20px;
+grid-template-columns: repeat(4,1fr);
+}
+
+.main .gridvideos .video {
+  width: 100%;
+  display: block;
+}
+.main .gridvideos .video img {
+width: 100%;
+}
+/* responsive*/
+@media screen and (max-width:1200px) {
+  .gridvideos{
+    grid-template-columns: repeat(3,1fr);
+  }
+}
+@media screen and (max-width:992px) {
+  .gridvideos{
+    grid-template-columns: repeat(2,1fr);
+  }
+}
+@media screen and (max-width:768px) {
+  .gridvideos{
+    grid-template-columns: repeat(1,1fr);
+  }
 }
