--- a/generales.css
+++ b/generales.css
@@ -179,6 +179,7 @@ nav button:hover{
   align-items:center;
   justify-content:baseline;
   gap: 20px;
+  margin-left: 25px;
   width: 100%;
   overflow: hidden;
 }
