--- a/generales.css
+++ b/generales.css
@@ -45,6 +45,7 @@ input{
   border: rgba(128, 128, 128, 0.527) 1px solid;
   width: 500px;
   height: 38px;
+
 }
 
 .button-responsive {
@@ -105,7 +106,9 @@ nav button:hover{
 @media screen and (min-width:768px) {
   .busqueda{
     display:flex;
-    justify-content: center;}
+    justify-content: center;
+    overflow: hidden;
+  }
   .button-responsive{
     display: none;}
 }
